apollo-router/src/plugins/subgraph_cache/snapshots/apollo_router__plugins__subgraph_cache__tests__insert_with_requires-3.snap
---
source: apollo-router/src/plugins/subgraph_cache/tests.rs
expression: response
---
{
  "data": {
    "topProducts": [
      {
        "name": "Test",
        "shippingEstimate": 15,
        "price": 150
      }
    ]
  }
}
