apollo-router/src/plugins/subgraph_cache/snapshots/apollo_router__plugins__subgraph_cache__tests__insert_with_requires-4.snap
---
source: apollo-router/src/plugins/subgraph_cache/tests.rs
expression: response.response.headers().get(CACHE_CONTROL)
---
Some(
    "public",
)
