apollo-router/src/plugins/subgraph_cache/snapshots/apollo_router__plugins__subgraph_cache__tests__no_cache_control.snap
---
source: apollo-router/src/plugins/subgraph_cache/tests.rs
expression: response.response.headers().get(CACHE_CONTROL)
---
Some(
    "no-store",
)
